Fixed Layout Shift When Opening HelpDrawer

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,6 +9,10 @@ html {
   scrollbar-gutter: stable;
 }
 
+body.scs {
+  margin-right: 0 !important;
+}
+
 .appContainer {
   padding: rem(28px);
 
